--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,15 +2,15 @@ name: Deploy to GitHub Pages
 
 on:
   push:
-    branches: [main] # Trigger on push to the main branch
-  workflow_dispatch: # Allow manual triggering
+    branches: [master] 
+  workflow_dispatch: 
 
 permissions:
-  contents: write # Grant write access to push changes to the repository
+  contents: write
 
 jobs:
   deploy:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout the repository
         uses: actions/checkout@v4
@@ -26,5 +26,9 @@ jobs:
       - name: Build the project
         run: npm run build
 
-      - name: Deploy with gh-pages
-        run: npm run deploy
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+          personal_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./dist
+          publish_branch: gh-pages
